--- a/app/src/main/res/layout/item_news_layout.xml
+++ b/app/src/main/res/layout/item_news_layout.xml
@@ -86,14 +86,14 @@
             />
 
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/list_comment_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_columnSpan="2"
-            app:layout_columnWeight="1"
-            app:layout_rowSpan="2"
-            />
+        <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:id="@+id/list_comment_view"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:layout_columnSpan="2"-->
+            <!--app:layout_columnWeight="1"-->
+            <!--app:layout_rowSpan="2"-->
+            <!--/>-->
 
 
     <LinearLayout
@@ -135,15 +135,32 @@
         app:layout_gravity="right"
         >
 
-        <ImageButton
-            android:id="@+id/comment_button"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
-            android:background="@drawable/ic_comment_black_24dp"
-            android:elevation="8dp"
-            />
+            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/comment_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/ic_comment_black_24dp"
+                android:elevation="8dp"
+                />
+            <TextView
+                android:id="@+id/list_item_comment_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:gravity="center_horizontal"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textColor="@color/secondary_text"
+                app:layout_gravity="right"
+                android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
+                tools:text="0"/>
+        </LinearLayout>
 
 
         <ImageButton
