--- a/app/src/main/res/layout/item_news_layout.xml
+++ b/app/src/main/res/layout/item_news_layout.xml
@@ -82,6 +82,7 @@
             app:layout_columnSpan="2"
             app:layout_columnWeight="1"
             app:layout_rowSpan="2"
+            android:fontFamily="sans-serif"
 
             />
 
