--- a/app/src/main/res/layout/item_news_layout.xml
+++ b/app/src/main/res/layout/item_news_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.GridLayout
-    android:id="@+id/item"
+    android:id="@+id/item_news"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,86 +9,14 @@
     app:columnCount="2">
 
 
-    <ImageView
-        android:id="@+id/list_item_icon"
-        android:layout_width="120dp"
-        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
-        android:adjustViewBounds="true"
-        android:maxHeight="@dimen/profile_icon"
-        android:maxWidth="@dimen/profile_icon"
-        app:layout_columnWeight="1"
-        app:layout_gravity="left"
-        app:layout_rowSpan="2"
-        tools:src="@mipmap/splash"/>
-
-    <TextView
-        android:id="@+id/list_item_name_textview"
-        android:layout_width="0dp"
-        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
-        android:fontFamily="sans-serif"
-        android:gravity="left"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:textColor="@color/app_black"
-        app:layout_columnWeight="1"
-        app:layout_gravity="fill_horizontal"
-        tools:text="Name User"/>
-
-    <TextView
-        android:id="@+id/list_item_date_textview"
-        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
-        android:fontFamily="sans-serif"
-        android:textSize="16sp"
-        android:gravity="center_horizontal"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:textColor="@color/secondary_text"
-        app:layout_columnWeight="1"
-        app:layout_gravity="left"
-        tools:text="Today, April 03"/>
-
-
-    <TextView
-
-        android:id="@+id/list_item_title"
-        android:layout_width="wrap_content"
-        android:textColor="@color/app_blue_text"
-        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
-        android:padding="@dimen/abc_list_item_padding_horizontal_material"
+    <include
+        layout="@layout/item_news_header"
         app:layout_columnSpan="2"
         app:layout_columnWeight="1"
-        app:layout_gravity="fill_horizontal"
         app:layout_rowSpan="2"
-        tools:text="This is First Text "
-        >
-    </TextView>>
-
-    <ImageView
-        android:id="@+id/list_item_image"
-        android:layout_width="@dimen/preview_icon"
-        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
-        android:adjustViewBounds="true"
-        android:maxHeight="@dimen/preview_icon"
-        android:maxWidth="@dimen/preview_icon"
-        app:layout_columnSpan="2"
-        app:layout_columnWeight="1"
-        app:layout_gravity="fill_horizontal"
-        app:layout_rowSpan="2"
-        tools:src="@mipmap/splash"/>
-
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/list_tags_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_columnSpan="2"
-            app:layout_columnWeight="1"
-            app:layout_rowSpan="2"
-            android:fontFamily="sans-serif"
-
-            />
-
+        />
 
     <TextView
-
         android:id="@+id/list_item_description"
         android:layout_width="wrap_content"
         android:padding="@dimen/abc_list_item_padding_horizontal_material"
@@ -99,7 +27,6 @@
         app:layout_rowSpan="2"
         tools:text="This is description"
         />
-
 
     <LinearLayout
         android:padding="@dimen/abc_list_item_padding_horizontal_material"
@@ -143,8 +70,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material">
 
             <ImageButton
                 android:id="@+id/comment_button"
@@ -154,16 +81,17 @@
                 android:background="@drawable/ic_comment_black_24dp"
                 android:elevation="8dp"
                 />
+
             <TextView
                 android:id="@+id/list_item_comment_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
+                android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textColor="@color/secondary_text"
                 app:layout_gravity="right"
-                android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
                 tools:text="0"/>
         </LinearLayout>
 
