--- a/app/src/main/res/layout/item_news_panel.xml
+++ b/app/src/main/res/layout/item_news_panel.xml
@@ -1,21 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.GridLayout
-    android:id="@+id/item_my_news"
+    android:id="@+id/item_my"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="8dp"
-    app:columnCount="2">
-
-
-    <include
-        layout="@layout/item_news_header"
-        app:layout_columnWeight="1"
-        app:layout_rowSpan="2"
-        app:layout_columnSpan="2"
-        />
+    app:columnCount="3">
 
 
     <TextView
@@ -24,19 +16,19 @@
         android:layout_width="wrap_content"
         android:padding="@dimen/abc_list_item_padding_horizontal_material"
         android:textColor="@color/app_black"
-        app:layout_columnSpan="2"
+        app:layout_columnSpan="3"
         app:layout_columnWeight="1"
         app:layout_gravity="fill_horizontal"
-        app:layout_rowSpan="2"
+        app:layout_rowSpan="3"
         tools:text="This is description"
         />
 
+
     <LinearLayout
-        android:padding="@dimen/abc_list_item_padding_horizontal_material"
         app:layout_columnWeight="1"
         app:layout_gravity="center"
-
-        >
+        app:layout_rowSpan="2"
+        android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material">
 
         <ImageButton
             android:id="@+id/like_button"
@@ -56,57 +48,68 @@
             android:gravity="center_horizontal"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="@color/secondary_text"
-            app:layout_columnWeight="1"
             app:layout_gravity="right"
             tools:text="0"/>
 
 
     </LinearLayout>
 
-
     <LinearLayout
-        android:padding="@dimen/abc_list_item_padding_horizontal_material"
+        android:orientation="vertical"
         app:layout_columnWeight="1"
-        app:layout_gravity="right"
-        >
+        app:layout_rowSpan="2"
+        android:gravity="center"
+        android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material">
 
+        <TextView
+            android:id="@+id/change_image_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:contextClickable="true"
+            android:text="@string/item_image_change_link"
+            android:textColor="@drawable/tab_text_link"
+            />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
-            android:orientation="horizontal">
+            >
 
-            <ImageButton
-                android:id="@+id/comment_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/ic_comment_black_24dp"
-                android:elevation="8dp"
-                />
             <TextView
                 android:id="@+id/list_item_comment_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:textColor="@color/secondary_text"
-                android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
+                android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+                android:textColor="@drawable/tab_text_link"
+
                 tools:text="0"/>
+
+            <TextView
+                android:id="@+id/item_comment_label_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:contextClickable="true"
+                android:text="@string/item_comment_label"
+                android:textColor="@drawable/tab_text_link"
+                />
+
         </LinearLayout>
 
+    </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/edit_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
-            android:background="@drawable/ic_edit_black_24dp"
-            android:elevation="8dp"
-            />
+    <LinearLayout
+        app:layout_columnWeight="1"
+        app:layout_gravity="right"
+        app:layout_rowSpan="2"
+        android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+        >
+
+
+
 
         <ImageButton
             android:id="@+id/delete_button"
@@ -122,5 +125,3 @@
 
 
 </android.support.v7.widget.GridLayout>
-
-
