--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,7 +37,6 @@
     </style>
 
 
-
     <!-- Style for a custom Preference Entry -->
     <style name="AppPreference">
         <item name="android:layout">@layout/preference_material</item>
@@ -80,13 +79,46 @@
         <item name="android:textColor">@color/secondary_text</item>
         <item name="android:textSize">16sp</item>
     </style>
+
     <!--Style for Login Screen  Button-->
 
     <style name="ButtonAppTheme" parent="Widget.AppCompat.Button.Colored">
         <item name="android:textColor">@color/app_black</item>
         <item name="android:background">@drawable/button_shape</item>
+    </style>
+
+
+    <!--Style for  Detail Screen TextInputLayout-->
+
+    <style name="Widget.Design.DetailTextInputLayout" parent="AppTheme">
+        <item name="hintTextAppearance">@style/AppTheme.DetailTextFloatLabelAppearance</item>
+        <item name="errorTextAppearance">@style/AppTheme.DetailTextErrorAppearance</item>
+        <item name="counterTextAppearance">@style/TextAppearance.Design.Counter</item>
+        <item name="counterOverflowTextAppearance">@style/TextAppearance.Design.Counter.Overflow</item>
+    </style>
+
+    <style name="AppTheme.DetailTextFloatLabelAppearance" parent="TextAppearance.Design.Hint">
+        <!-- Floating label appearance here -->
+        <item name="android:textColor">@color/app_black</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="AppTheme.DetailTextErrorAppearance" parent="TextAppearance.Design.Error">
+        <!-- Error message appearance here -->
+        <item name="android:textColor">@color/app_black</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="AppTheme.Widget.InputCommentField" parent="AppTheme">
+
+        <item name="android:textColor">@color/app_black</item>
+        <item name="android:background">@drawable/field_shape</item>
+        <item name="android:textSize">14sp</item>
+
 
     </style>
+
+
     <!--Style for warning dialog-->
     <style name="WarningDialogMessageTextStyle">
         <item name="android:gravity">center</item>
