--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <android.support.design.widget.CoordinatorLayout
     android:id="@+id/feed_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -45,7 +43,7 @@
         >
 
         <include
-            layout="@layout/item_detail_my_news"
+            layout="@layout/item_detail_news"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
