--- a/app/src/main/res/layout/item_detail_news.xml
+++ b/app/src/main/res/layout/item_detail_news.xml
@@ -11,9 +11,10 @@
         />
 
     <include
-        layout="@layout/item_news_panel"
+        layout="@layout/item_detail_news_panel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_link_margin"
         />
 
 
@@ -21,6 +22,7 @@
         layout="@layout/input_item_comment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_link_margin"
         />
 
     <android.support.v7.widget.RecyclerView
