--- a/app/src/main/res/layout/fragment_item_my_detail.xml
+++ b/app/src/main/res/layout/fragment_item_my_detail.xml
@@ -5,9 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-
-    >
+    android:fitsSystemWindows="true">
 
 
     <android.support.design.widget.AppBarLayout
@@ -34,22 +32,21 @@
             android:layout_gravity="center"
             android:text="@string/detail_toolbar_label"
             android:textColor="@android:color/white"
-
             />
     </android.support.design.widget.AppBarLayout>
+
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
         <include
-            layout="@layout/item_detail_news"
+            layout="@layout/item_detail_my_news"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             />
-    </android.support.v4.widget.NestedScrollView>
-
+</android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
