--- a/app/src/main/res/layout/profile_header.xml
+++ b/app/src/main/res/layout/profile_header.xml
@@ -96,7 +96,7 @@
             />
 
 
-        <com.melnykov.fab.FloatingActionButton
+<!--        <com.melnykov.fab.FloatingActionButton
             android:id="@+id/fab_edit"
             android:layout_width="9dp"
             android:layout_height="wrap_content"
@@ -108,7 +108,7 @@
             fab:fab_colorPressed="@color/primary_dark"
             fab:fab_colorRipple="@color/primary_light"
             fab:fab_shadow="true"
-            fab:fab_type="mini"/>
+            fab:fab_type="mini"/>-->
     </FrameLayout>
 
 </LinearLayout>
