update  choose new image (invoke camera or add from storage); update navigetion on details screens

--- a/app/src/main/res/layout/item_detail_my_news.xml
+++ b/app/src/main/res/layout/item_detail_my_news.xml
@@ -17,6 +17,7 @@
             layout="@layout/item_my_detail_news_panel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_link_margin"
             />
 
 
