--- a/app/src/main/res/layout/item_my_detail_news_panel.xml
+++ b/app/src/main/res/layout/item_my_detail_news_panel.xml
@@ -6,39 +6,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="8dp"
     android:layout_margin="4dp"
+    android:elevation="8dp"
     app:columnCount="3">
 
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/descriptionInputLayout"
+    <!--<android.support.design.widget.TextInputLayout-->
+    <!--android:id="@+id/descriptionInputLayout"-->
+    <!--style="@style/AppTheme.Widget.InputCommentField"-->
+    <!--app:layout_columnSpan="3"-->
+    <!--app:layout_columnWeight="1"-->
+    <!--app:layout_gravity="fill_horizontal"-->
+
+    <!--&gt;-->
+
+    <!--<android.support.v7.widget.AppCompatEditText-->
+    <!--android:id="@+id/list_item_description"-->
+    <!--style="@style/Widget.Design.DetailTextInputLayout"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="40dp"-->
+    <!--android:layout_gravity="center"-->
+    <!--android:ems="4"-->
+    <!--android:gravity="fill_horizontal"-->
+    <!--android:hint="@string/description_hint"-->
+    <!--android:inputType="textMultiLine"-->
+    <!--android:paddingTop="2dp"-->
+    <!--android:textColor="@color/app_black"-->
+    <!--/>-->
+    <!--</android.support.design.widget.TextInputLayout>-->
+    <TextView
+
+        android:id="@+id/list_item_description"
         style="@style/AppTheme.Widget.InputCommentField"
+        android:layout_width="wrap_content"
+        android:padding="@dimen/abc_list_item_padding_horizontal_material"
+        android:text="This is description"
+        android:textColor="@color/app_black"
         app:layout_columnSpan="3"
         app:layout_columnWeight="1"
         app:layout_gravity="fill_horizontal"
-
-        >
-
-        <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/list_item_description"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:gravity="fill_horizontal"
-            android:ems="4"
-            android:hint="@string/description_hint"
-            android:inputType="textMultiLine"
-            android:paddingTop="2dp"
-           style="@style/Widget.Design.DetailTextInputLayout"
-            android:textColor="@color/app_black"
-            />
-
-    </android.support.design.widget.TextInputLayout>
+        app:layout_rowSpan="3"
+        tools:text="This is description"
+        />
 
 
     <LinearLayout
         android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
+        android:paddingTop="1dp"
         app:layout_columnWeight="1"
         app:layout_gravity="center"
         app:layout_rowSpan="2">
@@ -57,63 +71,49 @@
             android:id="@+id/list_item_likes_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:fontFamily="sans-serif"
             android:gravity="center_horizontal"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textColor="@color/secondary_text"
-            app:layout_gravity="right"
             android:text="0"
+            android:textColor="@color/secondary_text"
             tools:text="0"/>
 
 
     </LinearLayout>
 
+
     <LinearLayout
-        android:gravity="center"
-        android:orientation="vertical"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
         app:layout_columnWeight="1"
+        app:layout_gravity="center_vertical"
         app:layout_rowSpan="2">
 
         <TextView
-            android:id="@+id/change_image_link"
+            android:id="@+id/list_item_comment_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:gravity="center_horizontal"
+            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+            android:textColor="@drawable/tab_text_link"
+
+            tools:text="0"/>
+
+        <TextView
+            android:id="@+id/item_comment_label_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
             android:contextClickable="true"
-            android:text="@string/item_image_change_link"
+            android:text="@string/item_comment_label"
             android:textColor="@drawable/tab_text_link"
             />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
-
-            <TextView
-                android:id="@+id/list_item_comment_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:gravity="center_horizontal"
-                android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
-                android:textColor="@drawable/tab_text_link"
-
-                tools:text="0"/>
-
-            <TextView
-                android:id="@+id/item_comment_label_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:contextClickable="true"
-                android:text="@string/item_comment_label"
-                android:textColor="@drawable/tab_text_link"
-                />
-
-        </LinearLayout>
-
     </LinearLayout>
+
 
     <LinearLayout
         android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
