--- a/app/src/main/res/layout/item_edit_news_header.xml
+++ b/app/src/main/res/layout/item_edit_news_header.xml
@@ -71,7 +71,7 @@
         android:maxWidth="@dimen/preview_icon"
         app:layout_columnSpan="2"
         app:layout_columnWeight="1"
-        app:layout_gravity="fill_horizontal"
+        app:layout_gravity="center"
         app:layout_rowSpan="2"
         tools:src="@mipmap/splash"/>
 
