--- a/app/src/main/res/layout/item_news_header.xml
+++ b/app/src/main/res/layout/item_news_header.xml
@@ -63,14 +63,13 @@
 
     <ImageView
         android:id="@+id/list_item_image"
-        android:layout_width="@dimen/preview_icon"
         android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
         android:adjustViewBounds="true"
         android:maxHeight="@dimen/preview_icon"
         android:maxWidth="@dimen/preview_icon"
         app:layout_columnSpan="2"
         app:layout_columnWeight="1"
-        app:layout_gravity="fill_horizontal"
+        app:layout_gravity="center"
         app:layout_rowSpan="2"
         tools:src="@mipmap/splash"/>
 
