--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -93,6 +93,12 @@
         <item name="android:height">30dp</item>
         <item name="android:width">50dp</item>
     </style>
+    <style name="AddItemButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:textColor">@color/app_black</item>
+        <item name="android:background">@drawable/button_comment</item>
+        <item name="android:height">30dp</item>
+        <item name="android:width">50dp</item>
+    </style>
 
 
     <!--Style for  Detail Screen TextInputLayout-->
